--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@ body, html {
   background-repeat: no-repeat;
   background-color:lightgray;
   background-size: 70% 100%;
-  background-image: url("/images/website2.jpg");
+  background-image: url("/images/website2.jpeg");
   min-height: 100%;
 }
 
