--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@ body, html {
       <p><i>"Design is where science and art break even."</i></p>
       <p>Robin Matthews</p>
     </div>
-    <img src="/images/website2.jpeg" style="width:100%;max-width:1000px" class="w3-margin-top">
+    <img src="images/website2.jpeg" style="width:100%;max-width:1000px" class="w3-margin-top">
     <p><strong> Tech Tower </p>
     <p><strong> Georgia Tech </p>
   </div>
