--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@ body, html {
   background-repeat: no-repeat;
   background-color:lightgray;
   background-size: 70% 100%;
-  background-image: url("/images/resume.png");
+  background-image: url("images/website1.jpg");
   min-height: 100%;
 }
 
@@ -127,3 +127,4 @@ document.getElementById("myLink").click();
 
 </body>
 </html>
+
